--- a/android_app/Watr/app/src/main/AndroidManifest.xml
+++ b/android_app/Watr/app/src/main/AndroidManifest.xml
@@ -18,6 +18,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".ReportActivity"
+            android:label="@string/title_activity_report"
+            android:parentActivityName=".Main" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="watr.hack.watr.Main" />
+        </activity>
     </application>
 
 </manifest>
