--- a/node_server/package.json
+++ b/node_server/package.json
@@ -6,7 +6,9 @@
         "async": "1.3.x",
 		"mongodb": "2.1.x",
         "express": "4.13.x",
-        "body-parser": "1.15.x"
+        "body-parser": "1.15.x",
+        "node-geocoder": "3.7.x",
+        "geocoder": "0.2.x"
     },
     "engine": "node >= 0.10.25"
 }
