Using str.toLowerCase() to ensure that measurement types are lowercased before we check for them

--- a/web_app/static/measurement_ranges.json
+++ b/web_app/static/measurement_ranges.json
@@ -11,7 +11,7 @@
         "goal":7000000,
         "limit":7000000,
         "long_unit":"million fibers per liter",
-        "short_unit":"MFL"
+        "short_unit":"mfl"
     },
     "barium":{
         "goal":2,
