--- a/android_app/Watr/app/build.gradle
+++ b/android_app/Watr/app/build.gradle
@@ -32,4 +32,5 @@ dependencies {
     compile 'com.android.support:support-v4:23.1.1'
     compile 'com.google.android.gms:play-services:8.4.0'
     compile 'com.google.code.gson:gson:2.2.4'
+    compile 'org.adw.library:discrete-seekbar:1.0.1'
 }
